tests/expectations/compiler/constants/global_shadowing_constant_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372009]: variable `HELLO` shadowed by
    --> compiler-test:5:11
     |
   5 |     const HELLO: u8 = 1u8;
     |           ^^^^^
"""]
